# arpa-veneto-weather

./: .devcontainer-lock.json  .devcontainer.json  .gitignore  .ruff.toml  CHANGELOG.md  README.md  hacs.json  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_ha.txt
.github/workflows/: lint.yml  release.yml  validate.yaml
config/: configuration.yaml
custom_components/arpa_veneto_weather/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  thresholds.py  weather.py
custom_components/arpa_veneto_weather/translations/: en.json  it.json
scripts/: bootstrap  develop  setup
