[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arpa-veneto-weather"
version = "0.1.0"
description = "Home Assistant integration for Arpa Veneto Weather current conditions and forecast bulletins"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.11"
dependencies = [
    "pytz==2026.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_components*"]